fix junke -> juke
